TME_10017: Update paths to Boney Files folder, enable track 2

--- a/boney-files.html
+++ b/boney-files.html
@@ -314,7 +314,7 @@
         <div class="section-label mt-60">[REC_001.1] TRACK LISTING</div>
         <div class="tracklist">
             <h3 class="centered mb-20">Audio Index</h3>
-            <div class="track playable" data-track="1" data-src="media/01 - The Search, What's in the Box.mp3" onclick="playTrack(this)">
+            <div class="track playable" data-track="1" data-src="media/Boney Files/01 - The Search, What's in the Box.mp3" onclick="playTrack(this)">
                 <span class="track-number">1.</span>
                 <span class="track-title-wrap">
                     <button class="play-btn" aria-label="Play">▶</button>
@@ -322,9 +322,12 @@
                 </span>
                 <span class="track-duration">1:08</span>
             </div>
-            <div class="track">
+            <div class="track playable" data-track="2" data-src="media/Boney Files/02 - Too Far North (To Get a Tan).mp3" onclick="playTrack(this)">
                 <span class="track-number">2.</span>
-                <span class="track-title">Too Far North (To Get a Tan)</span>
+                <span class="track-title-wrap">
+                    <button class="play-btn" aria-label="Play">▶</button>
+                    <span class="track-title">Too Far North (To Get a Tan)</span>
+                </span>
                 <span class="track-duration">5:12</span>
             </div>
             <div class="track">
