TME_10017: Fix close button - remove red color from play button

--- a/boney-files.html
+++ b/boney-files.html
@@ -526,7 +526,9 @@
             playerBar.classList.remove('active');
             if (currentTrackElement) {
                 currentTrackElement.classList.remove('playing');
-                currentTrackElement.querySelector('.play-btn').textContent = '▶';
+                const playBtn = currentTrackElement.querySelector('.play-btn');
+                playBtn.textContent = '▶';
+                playBtn.classList.remove('playing');
                 currentTrackElement = null;
             }
         }
