TME_10017: Enable track 3 - Making Sense

--- a/boney-files.html
+++ b/boney-files.html
@@ -330,9 +330,12 @@
                 </span>
                 <span class="track-duration">5:12</span>
             </div>
-            <div class="track">
+            <div class="track playable" data-track="3" data-src="media/Boney Files/03 - Making Sense.mp3" onclick="playTrack(this)">
                 <span class="track-number">3.</span>
-                <span class="track-title">Making Sense</span>
+                <span class="track-title-wrap">
+                    <button class="play-btn" aria-label="Play">▶</button>
+                    <span class="track-title">Making Sense</span>
+                </span>
                 <span class="track-duration">3:00</span>
             </div>
             <div class="track">
