TME_10017: Enable track 4 - Thursdays

--- a/boney-files.html
+++ b/boney-files.html
@@ -338,9 +338,12 @@
                 </span>
                 <span class="track-duration">3:00</span>
             </div>
-            <div class="track">
+            <div class="track playable" data-track="4" data-src="media/Boney Files/04 - Thursdays.mp3" onclick="playTrack(this)">
                 <span class="track-number">4.</span>
-                <span class="track-title">Thursdays</span>
+                <span class="track-title-wrap">
+                    <button class="play-btn" aria-label="Play">▶</button>
+                    <span class="track-title">Thursdays</span>
+                </span>
                 <span class="track-duration">4:01</span>
             </div>
             <div class="track">
