TME_10017: Enable track 5 - CFC Free (Cling Film Figurines) Live at Paddy's

--- a/boney-files.html
+++ b/boney-files.html
@@ -346,9 +346,12 @@
                 </span>
                 <span class="track-duration">4:01</span>
             </div>
-            <div class="track">
+            <div class="track playable" data-track="5" data-src="media/Boney Files/05 - CFC Free (Cling Film Figurines) Live at Paddy's.mp3" onclick="playTrack(this)">
                 <span class="track-number">5.</span>
-                <span class="track-title">CFC Free (Cling Film Figurines) Live at Paddy's</span>
+                <span class="track-title-wrap">
+                    <button class="play-btn" aria-label="Play">▶</button>
+                    <span class="track-title">CFC Free (Cling Film Figurines) Live at Paddy's</span>
+                </span>
                 <span class="track-duration">4:37</span>
             </div>
             <div class="track">
