TME_10018: Enable track 6 - Punch

--- a/boney-files.html
+++ b/boney-files.html
@@ -354,9 +354,12 @@
                 </span>
                 <span class="track-duration">4:37</span>
             </div>
-            <div class="track">
+            <div class="track playable" data-track="6" data-src="media/Boney Files/06 - Punch.mp3" onclick="playTrack(this)">
                 <span class="track-number">6.</span>
-                <span class="track-title">Punch</span>
+                <span class="track-title-wrap">
+                    <button class="play-btn" aria-label="Play">▶</button>
+                    <span class="track-title">Punch</span>
+                </span>
                 <span class="track-duration">4:12</span>
             </div>
             <div class="track">
