TME_10019: Enable tracks 7 and 8 - Idle Bones and Climatize

--- a/boney-files.html
+++ b/boney-files.html
@@ -362,14 +362,20 @@
                 </span>
                 <span class="track-duration">4:12</span>
             </div>
-            <div class="track">
+            <div class="track playable" data-track="7" data-src="media/Boney Files/07 - Idle Bones.mp3" onclick="playTrack(this)">
                 <span class="track-number">7.</span>
-                <span class="track-title">Idle Bones</span>
+                <span class="track-title-wrap">
+                    <button class="play-btn" aria-label="Play">▶</button>
+                    <span class="track-title">Idle Bones</span>
+                </span>
                 <span class="track-duration">4:50</span>
             </div>
-            <div class="track">
+            <div class="track playable" data-track="8" data-src="media/Boney Files/08 - Climatize.mp3" onclick="playTrack(this)">
                 <span class="track-number">8.</span>
-                <span class="track-title">Climatize</span>
+                <span class="track-title-wrap">
+                    <button class="play-btn" aria-label="Play">▶</button>
+                    <span class="track-title">Climatize</span>
+                </span>
                 <span class="track-duration">7:31</span>
             </div>
             <div class="track">
