TME_10019: Enable all 10 tracks - complete album ready

--- a/boney-files.html
+++ b/boney-files.html
@@ -378,14 +378,20 @@
                 </span>
                 <span class="track-duration">7:31</span>
             </div>
-            <div class="track">
+            <div class="track playable" data-track="9" data-src="media/Boney Files/09 - Rock Paper Scissors.mp3" onclick="playTrack(this)">
                 <span class="track-number">9.</span>
-                <span class="track-title">Rock Paper Scissors</span>
+                <span class="track-title-wrap">
+                    <button class="play-btn" aria-label="Play">▶</button>
+                    <span class="track-title">Rock Paper Scissors</span>
+                </span>
                 <span class="track-duration">3:36</span>
             </div>
-            <div class="track">
+            <div class="track playable" data-track="10" data-src="media/Boney Files/10 - Cow Theme Parks.mp3" onclick="playTrack(this)">
                 <span class="track-number">10.</span>
-                <span class="track-title">Cow Theme Parks</span>
+                <span class="track-title-wrap">
+                    <button class="play-btn" aria-label="Play">▶</button>
+                    <span class="track-title">Cow Theme Parks</span>
+                </span>
                 <span class="track-duration">6:12</span>
             </div>
         </div>
